# ministat

./: .gitignore  AUTHORS  COPYING  Makefile  Makefile.in  NEWS  README  configure  configure.ac  ministat.1  ministat.c
src/: Makefile.am  Makefile.in  ministat.c
